removed the background-color styles of the #header-placeholder, #footer-placeholder, and main tag. Also added stylings for div#background that fixes the div in place and keeps the backround behind all elements.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body {
   width: 100%;
 }
 
+div#background {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 
 #wrapper {
   width: 100%;
@@ -35,7 +43,6 @@ header#site-header{
 }
 
 div#header-placeholder{
-  background-color: #8884ff;
   height: 100%;
   min-height: 100vh;
   flex-basis: 18em;
@@ -48,7 +55,7 @@ main{
   transition: width .3s linear;
   height: 100%;
   min-height: 100vh;
-  background-color: #04cca4;
+  z-index: 2;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -67,7 +74,6 @@ footer#site-footer{
 }
 
 div#footer-placeholder{
-  background-color: #ff83de;
   height: 100%;
   min-height: 100vh;
   flex-basis: 18em;
